# Bastion-Server

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt
agent/: __init__.py  alerts.py  anomaly.py  client.py  config.py  inventory.py  main.py  prompts.py  runbook.py  sessions.py
agent/security/: __init__.py  allowlist.py  approval.py  audit.py  console_allowlist.py  sanitizer.py
agent/tools/: __init__.py  backup_audit.py  base.py  blast_radius.py  config_diff.py  cpanel.py  cron_audit.py  customer_impact.py  database.py  diagnose.py  docker_tools.py  explain.py  files.py  game_diagnose.py  health.py  incident_report.py  incident_timeline.py  infrastructure_pulse.py  local.py  log_correlate.py  mod_conflict_check.py  monitoring.py  page_debug.py  pterodactyl.py  pterodactyl_overview.py  registry.py  remote.py  resource_rightsizing.py  security_audit.py  self_update.py  server_info.py  ssh_pool.py  systemd.py  ticket_intake.py  uptime_probe.py  webserver.py  what_changed.py  wordpress.py  wp_deep_scan.py  wp_elementor_diagnose.py  (+1 more)
agent/ui/: __init__.py  daemon.py  terminal.py
config/: agent.yaml  console_commands.yaml  permissions.yaml  servers.yaml
scripts/: bastion  generate-ssh-keys.sh  setup-bastion.sh  setup-downstream.sh  update.sh
systemd/: bastion-agent.service
tests/: conftest.py  test_alerts.py  test_allowlist.py  test_anomaly.py  test_approval.py  test_audit.py  test_backup_audit.py  test_blast_radius.py  test_config_diff.py  test_console_allowlist.py  test_cron_audit.py  test_customer_impact.py  test_diagnose.py  test_elementor_diagnose.py  test_game_diagnose.py  test_health.py  test_incident_report.py  test_incident_timeline.py  test_infrastructure_pulse.py  test_inventory.py  test_log_correlate.py  test_mod_conflict_check.py  test_page_debug.py  test_pterodactyl.py  test_pterodactyl_overview.py  test_resource_rightsizing.py  test_runbook.py  test_sanitizer.py  test_security_audit.py  test_self_update.py  test_sessions.py  test_ssh_pool.py  test_tools.py  test_uptime_probe.py  test_webtools.py  test_what_changed.py  test_wp_deep_scan.py
