[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bastion-agent"
version = "0.1.0"
description = "Infrastructure management agent for Galaxy Gaming Host"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Galaxy Gaming Host"},
]

dependencies = [
    "anthropic>=0.39.0",
    "asyncssh>=2.14.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "rich>=13.7.0",
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
bastion-agent = "agent.main:cli"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
