[tool.poetry]
name = "your-package-name"
version = "0.1.0"
description = "A short description of your package"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://yourpackagehomepage.com"
repository = "https://github.com/rifle-ak/Bastion-Server"
documentation = "https://yourpackagedocs.com"
keywords = ["keyword1", "keyword2", "keyword3"]
categories = ["Development Tools"]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8 || ^3.9"

[tool.poetry.dev-dependencies]
linting = [
    { package = "flake8", version = "^3.9.0" },
    { package = "black", version = "^21.0b0" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core.masonry.builder"

[tool.poetry.classifiers]
Programming Language :: Python :: 3
Programming Language :: Python :: 3.6
Programming Language :: Python :: 3.7
Programming Language :: Python :: 3.8
Programming Language :: Python :: 3.9